mod wrap init wave img; mod wrap event listener; add click, dbclick event; add resize svg after redraw; add config warn; fix typing in header

--- a/src/components/wave-img/wave-img.scss
+++ b/src/components/wave-img/wave-img.scss
@@ -8,6 +8,10 @@
     height: calc(100% - 70px);
     overflow-x: scroll;
     overflow-y: scroll;
+
+    #wave-space {
+        text-align: left;
+    }
 }
 
 .btn-row {
